@@ -110,7 +110,7 @@
 	    is the original reference to 
 	    be replaced, and <replaceable>'replace'</replaceable> is the
 	    <acronym>URI</acronym> of the replacement entity to be used. The
-	    <option>-add</option> option will not overwrite
+	    <option>--add</option> option will not overwrite
 	    <replaceable>filename</replaceable>, outputing to stdout, unless
 	    <option>--noout</option> is used. The <option>--add</option> will always
 	    take three parameters even if some of the <acronym>XML</acronym> catalog
@@ -118,6 +118,14 @@
 <!--
 FIXME - Is my list of possible types correct? Are SGML types the same? 
 -->
+	  </simpara>
+	  <simpara>
+	    If the <option>--add</option> option is used following the
+	    <option>--sgml</option> option, only a single argument, a
+	    <replaceable>filename</replaceable>, is used. This is used to add
+	    the name of a catalog file to an <acronym>SGML</acronym>
+	    supercatalog, a file that contains references to other included
+	    <acronym>SGML</acronym> catalog files.
 	  </simpara>
 	</listitem>
       </varlistentry>
