@@ -1,3 +1,8 @@
+Mon Oct  8 20:38:27 MDT 2001 John Fleck <jfleck@inkstain.net>
+
+	* doc/xmlcatalog_man.xml, xmlcatalog.1, xmlcatalog_man.html
+	adding documentation for DV's supercatalog support
+
 Mon Oct  8 17:00:16 CEST 2001 Daniel Veillard <daniel@veillard.com>
 
 	* include/libxml/catalog.h catalog.c xmlcatalog.c: adding SGML
